--- a/src/pages/AgencyListPage/AgencyListPage.css
+++ b/src/pages/AgencyListPage/AgencyListPage.css
@@ -33,3 +33,13 @@
 	height: 40px;
 	object-fit: contain;
 }
+
+.agency-page .agency-description {
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+
+	line-clamp: 2;
+	box-orient: vertical;
+}
